Fix wrong color code for links in unordered lists

--- a/src/utils/md.module.css
+++ b/src/utils/md.module.css
@@ -84,7 +84,7 @@
 .md > div > ol > li > a:hover,
 .md > div > ol > li > a:hover {
   background: none;
-  color: #1ABC9C;
+  color: #C8EFE8;
 }
 
 /* Images & GIFs */
